--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <p>
                   <b>Degree: </b>Higher Secondary   
                   <br>
-                  <b>Percentage: </b>96%
+                  <b>Percentage: </b>95%
                 </p>
 
                 <ul>
@@ -470,8 +470,8 @@
         <p>
           <a aria-label="Email Komal" href="mailto:komal.22it303@rtu.ac.in" target="_blank" data-position="top"
             data-tooltip="Email Komal" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Komal" href="mailto:komal.22it303@rtu.ac.in"
-              class="hoverline">komal.22it303@rtu.ac.in</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Komal" href="mailto:komal.22cse303@rtu.ac.in"
+              class="hoverline">komal.22cse303@rtu.ac.in</a></a>
         </p>
         <p>
           <a aria-label="View Komal on GitHub" href="https://github.com/komal858" target="_blank"
