--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Technology in Computer Science and Engineering
                   <br>
-                  <b>CGPA: </b>8.82/10
+                  <b>CGPA: </b>8.63/10
                 </p>
 
                 <ul>
@@ -468,7 +468,7 @@
               aria-label="Call Komal">+919301511858</a></a>
         </p>
         <p>
-          <a aria-label="Email Komal" href="mailto:komal.22it303@rtu.ac.in" target="_blank" data-position="top"
+          <a aria-label="Email Komal" href="mailto:komal.22cse303@rtu.ac.in" target="_blank" data-position="top"
             data-tooltip="Email Komal" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Komal" href="mailto:komal.22cse303@rtu.ac.in"
               class="hoverline">komal.22cse303@rtu.ac.in</a></a>
