--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   <meta property="og:url" content="https://github.com/komal858" />
   <meta property="og:site_name" content="Komal Agrawal | Software Developer" />
   <meta property="article:publisher" content="https://github.com/komal858" />
-  <meta property="og:image" content="https://Komalbhogayata.github.io/examples/preview.JPG" />
+  <meta property="og:image" content="https://Komalagrawal.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Komal_bhogayata" />
+  <meta name="twitter:site" content="@Komal_agrawal" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/Komal_bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/Komal_agrawal" />
   <meta name="author" content="Komal Agrawal" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -478,7 +478,7 @@
             data-position="top" data-tooltip="View Komal on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Komal on Github" href="https://github.com/komal858" class="hoverline"
-              target="_blank">github.com/Komalbhogayata</a></a>
+              target="_blank">github.com/Komalagrawal</a></a>
         </p>
         <p>
           <a aria-label="View Komal on LinkedIn" href="https://www.linkedin.com/in/komal-agrawal-92524a266/" target="_blank"
