--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             data-position="top" data-tooltip="View Komal on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Komal on Github" href="https://github.com/komal858" class="hoverline"
-              target="_blank">github.com/Komalagrawal</a></a>
+              target="_blank">github.com/KomalAgrawal</a></a>
         </p>
         <p>
           <a aria-label="View Komal on LinkedIn" href="https://www.linkedin.com/in/komal-agrawal-92524a266/" target="_blank"
