--- a/index.html
+++ b/index.html
@@ -267,11 +267,9 @@
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
+            <li><b>Languages:</b> Python, C, C++, HTML/CSS, Bash</li>
+            <li><b>Databases:</b> MySQL</li>
+            <li><b>Tools & Technologies:</b> Git</li>
           </ul>
           
         </p>
@@ -403,7 +401,7 @@
                 <p>
                   <b>Degree: </b>Higher Secondary   
                   <br>
-                  <b>Percentage: </b>96%
+                  <b>Percentage: </b>95%
                 </p>
 
                 <ul>
@@ -435,7 +433,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Technology in Computer Science and Engineering
                   <br>
-                  <b>CGPA: </b>8.82/10
+                  <b>CGPA: </b>8.63/10
                 </p>
 
                 <ul>
@@ -468,17 +466,17 @@
               aria-label="Call Komal">+919301511858</a></a>
         </p>
         <p>
-          <a aria-label="Email Komal" href="mailto:komal.22it303@rtu.ac.in" target="_blank" data-position="top"
+          <a aria-label="Email Komal" href="mailto:komal.22cse303@rtu.ac.in" target="_blank" data-position="top"
             data-tooltip="Email Komal" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Komal" href="mailto:komal.22it303@rtu.ac.in"
-              class="hoverline">komal.22it303@rtu.ac.in</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Komal" href="mailto:komal.22cse303@rtu.ac.in"
+              class="hoverline">komal.22cse303@rtu.ac.in</a></a>
         </p>
         <p>
           <a aria-label="View Komal on GitHub" href="https://github.com/komal858" target="_blank"
             data-position="top" data-tooltip="View Komal on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Komal on Github" href="https://github.com/komal858" class="hoverline"
-              target="_blank">github.com/Komalbhogayata</a></a>
+              target="_blank">github.com/KomalAgrawal</a></a>
         </p>
         <p>
           <a aria-label="View Komal on LinkedIn" href="https://www.linkedin.com/in/komal-agrawal-92524a266/" target="_blank"
